[tool.poetry]
name = "se-interview"
version = "0.1.0"
description = "A simple LangGraph agent with web search capability"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
langgraph = "^0.2"
langchain = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
ddgs = "^9.0"
python-dotenv = "^1.0"
fastapi = ">=0.115"
uvicorn = "^0.32"
arize-phoenix = ">=13.0.0,<14.0.0"
arize-phoenix-evals = "<3.0.0"
arize-phoenix-otel = "*"
openinference-instrumentation-langchain = "^0.1"
greenlet = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
